--- a/conf.yaml
+++ b/conf.yaml
@@ -1,4 +1,4 @@
-repos_path_prefix: /Repos/michael.shtelma@databricks.com/dlt-cicd-demo
-git_url: https://github.com/databricks/dlt-cicd-demo.git
+repos_path_prefix: /Repos/vikas.yadav@databricks.com/dlt-cicd-demo
+git_url: https://github.com/VikYadav/dlt-cicd-demo.git
 provider: gitHub
-branch: master
+branch: new_feature
